include/plasma_d.h

/** ****************************************************************************
 *  Declarations of math functions (LAPACK layout) - alphabetical order
 **/
int PLASMA_dgebrd(PLASMA_enum jobq, PLASMA_enum jobpt, int M, int N, double *A, int LDA, double *D, double *E, PLASMA_desc *descT, double *Q, int LDQ, double *PT, int LDPT);
int PLASMA_dgecon(PLASMA_enum norm, int N, double *A, int LDA, double anorm, double *rcond);
int PLASMA_dgelqf(int M, int N, double *A, int LDA, PLASMA_desc *descT);
int PLASMA_dgelqs(int M, int N, int NRHS, double *A, int LDA, PLASMA_desc *descT, double *B, int LDB);
int PLASMA_dgels(PLASMA_enum trans, int M, int N, int NRHS, double *A, int LDA, PLASMA_desc *descT, double *B, int LDB);
int PLASMA_dgemm(PLASMA_enum transA, PLASMA_enum transB, int M, int N, int K, double alpha, double *A, int LDA, double *B, int LDB, double beta, double *C, int LDC);
int PLASMA_dgeqp3( int M, int N, double *A, int LDA, int *jpvt, double *tau, double *work, double *rwork);
int PLASMA_dgeqrf(int M, int N, double *A, int LDA, PLASMA_desc *descT);
int PLASMA_dgeqrs(int M, int N, int NRHS, double *A, int LDA, PLASMA_desc *descT, double *B, int LDB);
int PLASMA_dgecfi(int m, int n, double *A, PLASMA_enum fin, int imb, int inb, PLASMA_enum fout, int omb, int onb);
int PLASMA_dgecfi_Async(int m, int n, double *A, PLASMA_enum f_in, int imb, int inb, PLASMA_enum f_out, int omb, int onb, PLASMA_sequence *sequence, PLASMA_request *request);
/** ****************************************************************************
 * Auxiliary function prototypes
 **/
int PLASMA_dLapack_to_Tile(double *Af77, int LDA, PLASMA_desc *A);
int PLASMA_dTile_to_Lapack(PLASMA_desc *A, double *Af77, int LDA);
int PLASMA_dLapack_to_Tile_Async(double *Af77, int LDA, PLASMA_desc *A, PLASMA_sequence *sequence, PLASMA_request *request);
int PLASMA_dTile_to_Lapack_Async(PLASMA_desc *A, double *Af77, int LDA, PLASMA_sequence *sequence, PLASMA_request *request);